SimpleComplex/Validate 1.x, 2017-05-27
--------------------------------------
- Removed make(); folks should use getInstance() instead.
- Added setLogger() methods, for providing logger after instantiation.
- Only one exposed (and optional) dependency: logger.

SimpleComplex/Validate 1.x, 2017-05-26
--------------------------------------
- Package separated from SimpleComplex/Filter.
- Constructor use soft dependencies.

SimpleComplex/Validate 1.x, 2017-05-25
--------------------------------------
- Use ValidateByRules via Validate::challengeRules()
- Option errUnconditionally.
- Exceptions moved to sub namespace \Exception.
- ValidateByRules recording.

SimpleComplex/Validate 1.x, 2017-05-23
--------------------------------------
- Parameter/return type declarations.
- numeric() now returns 'integer'/'float' on pass.
- ValidateByRules new 'alternativeEnum' pseudo-rule replaces similar which only
  worked when the var was empty().

SimpleComplex/Validate 1.x, 2017-05-22
--------------------------------------
- Initial design complete, however not tested.